deploy/fleet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pota-updater
  labels:
    app.kubernetes.io/name: pota-updater
spec:
  selector:
    app.kubernetes.io/name: pota-updater
  ports:
    - name: http
      port: 3000
      targetPort: http
